// Copyright (c) 2026 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v2;

option csharp_namespace = "Com.Daml.Ledger.Api.V2";
option java_outer_classname = "ReassignmentCommandOuterClass";
option java_package = "com.daml.ledger.api.v2";

message ReassignmentCommands {
  // Identifier of the on-ledger workflow that this command is a part of.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Optional
  string workflow_id = 1;

  // Uniquely identifies the participant user that issued the command.
  // Must be a valid UserIdString (as described in ``value.proto``).
  // Required unless authentication is used with a user token.
  // In that case, the token's user-id will be used for the request's user_id.
  string user_id = 2;

  // Uniquely identifies the command.
  // The triple (user_id, submitter, command_id) constitutes the change ID for the intended ledger change.
  // The change ID can be used for matching the intended ledger changes with all their completions.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string command_id = 3;

  // Party on whose behalf the command should be executed.
  // If ledger API authorization is enabled, then the authorization metadata must authorize the sender of the request
  // to act on behalf of the given party.
  // Must be a valid PartyIdString (as described in ``value.proto``).
  // Required
  string submitter = 4;

  // A unique identifier to distinguish completions for different submissions with the same change ID.
  // Typically a random UUID. Applications are expected to use a different UUID for each retry of a submission
  // with the same change ID.
  // Must be a valid LedgerString (as described in ``value.proto``).
  //
  // If omitted, the participant or the committer may set a value of their choice.
  // Optional
  string submission_id = 5;

  // Individual elements of this reassignment. Must be non-empty.
  repeated ReassignmentCommand commands = 6;
}

message ReassignmentCommand {
  oneof command {
    UnassignCommand unassign_command = 1;
    AssignCommand assign_command = 2;
  }
}

// Unassign a contract
message UnassignCommand {
  // The ID of the contract the client wants to unassign.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string contract_id = 1;

  // The ID of the source synchronizer
  // Must be a valid synchronizer id
  // Required
  string source = 2;

  // The ID of the target synchronizer
  // Must be a valid synchronizer id
  // Required
  string target = 3;
}

// Assign a contract
message AssignCommand {
  // The ID from the unassigned event to be completed by this assignment.
  // Must be a valid LedgerString (as described in ``value.proto``).
  // Required
  string reassignment_id = 1;

  // The ID of the source synchronizer
  // Must be a valid synchronizer id
  // Required
  string source = 2;

  // The ID of the target synchronizer
  // Must be a valid synchronizer id
  // Required
  string target = 3;
}
